# RenderRex

./: .clang-format  .gitignore  BoundingBox.h  CMakeLists.txt  Camera.cpp  Camera.h  Drawable.cpp  Drawable.h  InstancedMesh.cpp  InstancedMesh.h  LICENSE  Mesh.cpp  Mesh.h  MeshIO.cpp  MeshIO.h  Primitives.cpp  Primitives.h  Property.cpp  Property.h  README.md  RenderRex.cpp  RenderRex.h  Renderer.cpp  Renderer.h  ShaderCode.h  SmallVector.h  Utils.cpp  Utils.h  VisualMesh.cpp  VisualMesh.h  main.cpp  spot.cpp
examples/: CMakeLists.txt  mesh.cpp  network.cpp  pointcloud.cpp  test.cpp
glfw3webgpu/: glfw3webgpu.c
imgui/: imconfig.h
imgui/backends/: imgui_impl_wgpu.cpp  imgui_impl_wgpu.h
imguizmo/: CmakeLists.txt
